# FastAndRobustMeshArrangements

./: CMakeLists.txt  booleans.cpp  booleans.h  main.cpp  meshArrangement.cpp  meshArrangement.h
code/: aux_structure.h  fast_trimesh.cpp  fast_trimesh.h  io_functions.cpp  solve_intersections.cpp  solve_intersections.h  triangulation.cpp  triangulation.h
